# IPCamTenvis

./: CMakeLists.txt  README.txt  RELEASE-NOTES.txt  Tenvis.conf  agent_release_version.h  main.c
OOBE/: OOBE_defaults.h  main.c  oobe_config.c  oobe_config.h  oobe_connectivity.c  oobe_connectivity.h  oobe_play_sounds.c  oobe_play_sounds.h
ag_cam_io/: README.txt  ac_alfapro.c  ac_alfapro.h  ac_cam.c  ac_cam.h  ac_cam_types.c  ac_cam_types.h  ac_cloud.c  ac_cloud.h  ac_http.c  ac_http.h  ac_rstp.c  ac_rstp.h  ac_rtsp.c  ac_rtsp.h  ac_tcp.c  ac_tcp.h  ac_udp.c  ac_udp.h  ac_video.c  ac_video.h  ac_video_interface.c  ac_video_interface.h  ac_wowza.c  ac_wowza.h  ag_digest.c  ag_digest.h  at_tcp.c  at_tcp.h  at_udp.c  at_udp.h
ag_config/: README.txt  ag_db_mgr.c  ag_db_mgr.h  ag_defaults.h  ag_settings.c  ag_settings.h
ag_converter/: README.txt  ao_cam2json.c  ao_cam2json.h  ao_cam_commands.c  ao_cam_commands.h  ao_cma_cam.c  ao_cma_cam.h  ao_cmd_cloud.c  ao_cmd_cloud.h  ao_cmd_data.c  ao_cmd_data.h  ao_cmd_proxy.c  ao_cmd_proxy.h  ao_json2cam.c  ao_json2cam.h
ag_queues/: README.txt  aq_queues.c  aq_queues.h
ag_ring_buffer/: README.txt  ab_ring_bufer.c  ab_ring_bufer.h  ab_test.c
ag_threads/: README.txt  at_cam_alerts_reader.c  at_cam_alerts_reader.h  at_cam_control.c  at_cam_control.h  at_cam_files_sender.c  at_cam_files_sender.h  at_cam_read.c  at_cam_read.h  at_cam_video.c  at_cam_video.h  at_cam_video_read.c  at_cam_video_read.h  at_cam_video_write.c  at_cam_video_write.h  at_cam_write.c  at_cam_write.h  at_main_thread.c  at_main_thread.h  at_proxy_read.c  at_proxy_read.h  at_proxy_rw.c  at_proxy_rw.h  at_proxy_write.c  at_proxy_write.h  at_rw_thread.c  at_rw_thread.h  at_video_connector.c  at_video_connector.h  at_ws.c  at_ws.h  at_wud_write.c  at_wud_write.h
au_string/: README.txt  au_string.c  au_string.h
build-hisilicon/: CMakeCache.txt  Makefile
gsrtsp_local/: README.txt  rtsp_msg_ext.c  rtsp_msg_ext.h
ipcam_monitor/: README.txt  at_cam_alerts_reader.c  at_cam_alerts_reader.h  at_cam_files_sender.c  at_cam_files_sender.h  ipcam_monitor.c
json_parser/: README.txt  jq.c
libs/: CMakeLists.txt  README.txt
libs/ipcam_inc/: CString.h  Ctp.h  DvsConn.h  FileAVSyncReader.h  FileStruct.h  IpcamClt.h  RWLock.h  ReadWriter.h  ReceiverBuffer.h  Remotefile.h  Thread.h  Timeseg.h  TransferSession.h  basetype.h  errdefs.h  event_monitor_module.h  global.h  hi_rtp.h  hi_rtp_rcvr.h  iwlist.h  linux_list.h  md5.h  mediatyp.h  misc.h  platform_adpt.h
libs/ipcam_src/: CString.cpp  Ctp.cpp  DvsConn.cpp  DvsConn.cpp.old  FileAVSyncReader.cpp  RWLock.cpp  ReadWriter.cpp  ReceiverBuffer.cpp  Remotefile.cpp  Thread.cpp  Timeseg.cpp  TransferSession.cpp  Update.cpp  event_monitor_module.cpp  md5.cpp  misc.c  platform_adpt.c  rtp_rcvr.cpp
scripts/: activate.sh  sound.sh
scripts/etc/: profile
scripts/mnt/mtd/: alp_tw.ini  reset.sh
vlc_local_test/: main.c  main.c.c
